{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 48,
  "lineage": "ed1708c2-312c-d5e5-9980-9c443f510f2c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:network-acl/acl-0d8e9c54d4c5c1c58",
            "default_network_acl_id": "acl-0d8e9c54d4c5c1c58",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d8e9c54d4c5c1c58",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "709754343729",
            "subnet_ids": [
              "subnet-0301a54c639f5fe6c",
              "subnet-03ceaa2e85c638d89",
              "subnet-074f54dd7dc333b82",
              "subnet-086dc07bf68bd6b36",
              "subnet-0c15193e162d939a0",
              "subnet-0ee23f84eb287b10e"
            ],
            "tags": {
              "Name": "EKS_CLUSTER_NAME-default",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-default",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:route-table/rtb-0114e1ce8ebe65e6b",
            "default_route_table_id": "rtb-0114e1ce8ebe65e6b",
            "id": "rtb-0114e1ce8ebe65e6b",
            "owner_id": "709754343729",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "EKS_CLUSTER_NAME-default",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-default",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:security-group/sg-05f2fefc7183b2d9c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05f2fefc7183b2d9c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "709754343729",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EKS_CLUSTER_NAME-default",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-default",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ca101bb59278472",
            "domain": "vpc",
            "id": "eipalloc-04ca101bb59278472",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-2-56-21.compute-1.amazonaws.com",
            "public_ip": "52.2.56.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EKS_CLUSTER_NAME-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:internet-gateway/igw-0af1a301b7d9d0b54",
            "id": "igw-0af1a301b7d9d0b54",
            "owner_id": "709754343729",
            "tags": {
              "Name": "EKS_CLUSTER_NAME",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ca101bb59278472",
            "association_id": "eipassoc-04efd9ad528e590fb",
            "connectivity_type": "public",
            "id": "nat-0c3f72d32a53a3fa8",
            "network_interface_id": "eni-05c2c24ed0c172ac3",
            "private_ip": "10.42.30.114",
            "public_ip": "52.2.56.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c15193e162d939a0",
            "tags": {
              "Name": "EKS_CLUSTER_NAME-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d21bb24771399a591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c3f72d32a53a3fa8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d21bb24771399a59",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0af1a301b7d9d0b54",
            "id": "r-rtb-04087ec79b69cb9101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04087ec79b69cb910",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:route-table/rtb-0d21bb24771399a59",
            "id": "rtb-0d21bb24771399a59",
            "owner_id": "709754343729",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "EKS_CLUSTER_NAME-SubnetPrivate",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-SubnetPrivate",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "timeouts": null,
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:route-table/rtb-04087ec79b69cb910",
            "id": "rtb-04087ec79b69cb910",
            "owner_id": "709754343729",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "EKS_CLUSTER_NAME-SubnetPublic",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-SubnetPublic",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "timeouts": null,
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c95b811308344b32",
            "route_table_id": "rtb-0d21bb24771399a59",
            "subnet_id": "subnet-0ee23f84eb287b10e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a74872a19e7f1c1",
            "route_table_id": "rtb-0d21bb24771399a59",
            "subnet_id": "subnet-074f54dd7dc333b82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d49c83f2919bb26",
            "route_table_id": "rtb-0d21bb24771399a59",
            "subnet_id": "subnet-03ceaa2e85c638d89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024925e99fb7cd2a9",
            "route_table_id": "rtb-04087ec79b69cb910",
            "subnet_id": "subnet-0c15193e162d939a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b7346a37c115329",
            "route_table_id": "rtb-04087ec79b69cb910",
            "subnet_id": "subnet-086dc07bf68bd6b36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ac86618f0ce88b7",
            "route_table_id": "rtb-04087ec79b69cb910",
            "subnet_id": "subnet-0301a54c639f5fe6c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:subnet/subnet-0ee23f84eb287b10e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.42.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee23f84eb287b10e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709754343729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS_CLUSTER_NAME-SubnetPrivate-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "karpenter.sh/discovery": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-SubnetPrivate-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "karpenter.sh/discovery": "EKS_CLUSTER_NAME"
            },
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:subnet/subnet-074f54dd7dc333b82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.42.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074f54dd7dc333b82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709754343729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS_CLUSTER_NAME-SubnetPrivate-us-east-1b",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "karpenter.sh/discovery": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-SubnetPrivate-us-east-1b",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "karpenter.sh/discovery": "EKS_CLUSTER_NAME"
            },
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:subnet/subnet-03ceaa2e85c638d89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.42.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ceaa2e85c638d89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709754343729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS_CLUSTER_NAME-SubnetPrivate-us-east-1c",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "karpenter.sh/discovery": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-SubnetPrivate-us-east-1c",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "karpenter.sh/discovery": "EKS_CLUSTER_NAME"
            },
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:subnet/subnet-0c15193e162d939a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.42.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c15193e162d939a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709754343729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS_CLUSTER_NAME-SubnetPublic-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-SubnetPublic-us-east-1a",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:subnet/subnet-086dc07bf68bd6b36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.42.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086dc07bf68bd6b36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709754343729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS_CLUSTER_NAME-SubnetPublic-us-east-1b",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-SubnetPublic-us-east-1b",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:subnet/subnet-0301a54c639f5fe6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.42.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0301a54c639f5fe6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "709754343729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS_CLUSTER_NAME-SubnetPublic-us-east-1c",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME-SubnetPublic-us-east-1c",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-079c023e6d4ab9b16"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:709754343729:vpc/vpc-079c023e6d4ab9b16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0d8e9c54d4c5c1c58",
            "default_route_table_id": "rtb-0114e1ce8ebe65e6b",
            "default_security_group_id": "sg-05f2fefc7183b2d9c",
            "dhcp_options_id": "dopt-0db55772150b323ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-079c023e6d4ab9b16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0114e1ce8ebe65e6b",
            "owner_id": "709754343729",
            "tags": {
              "Name": "EKS_CLUSTER_NAME",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            },
            "tags_all": {
              "Name": "EKS_CLUSTER_NAME",
              "created-by": "eks-workshop-v2",
              "env": "EKS_CLUSTER_NAME"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}